<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/large">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/x_large"
                android:text="@string/choose"
                android:textAppearance="@style/TextAppearance.ACARE.Headline6"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/gallery_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gallery_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/large"
                android:gravity="start"
                android:padding="@dimen/medium"
                android:text="@string/gallery"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_gallery"
                app:layout_constraintBottom_toTopOf="@id/camera_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/camera_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/large"
                android:gravity="start"
                android:padding="@dimen/medium"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gallery_icon" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>