<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.zedan.acare.supervisor.ui.tasks.TasksViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.tasks.TasksFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/large"
            android:text="@string/main"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.ACARE.Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_welcome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            tools:text="اهلا , احمد"
            android:text="@{@string/welcome + ( viewModel.userInfo.name ?? ``)}"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.ACARE.Headline7"
            android:layout_marginHorizontal="@dimen/medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_user"
            app:layout_constraintBottom_toBottomOf="@id/ic_user"
            app:layout_constraintEnd_toStartOf="@id/ic_user"
            app:layout_constraintHorizontal_chainStyle="spread_inside"

            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ic_user"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="@dimen/medium"
            app:srcCompat="@drawable/ic_user"
            android:background="?selectableItemBackgroundBorderless"
            app:setImageBitmap="@{viewModel.userInfo.image}"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.ACARE.Image.Circle"
            android:layout_marginHorizontal="@dimen/medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_main"
            app:layout_constraintStart_toEndOf="@id/txt_welcome_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/add_task"
            android:textSize="12sp"
            android:insetTop="8dp"
            android:insetBottom="8dp"
            android:layout_marginHorizontal="@dimen/medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_user"
            app:layout_constraintStart_toEndOf="@id/txt_ava_tasks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_ava_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_tasks"
            android:layout_marginStart="@dimen/xx_large"
            android:layout_marginEnd="@dimen/medium"
            android:textAppearance="@style/TextAppearance.ACARE.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/add_task_btn"
            app:layout_constraintBottom_toBottomOf="@id/add_task_btn"
            app:layout_constraintEnd_toStartOf="@id/add_task_btn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_empty"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/ic_empty"
            android:scaleType="centerInside"
            android:visibility="@{(viewModel.taskData() != null &amp;&amp; viewModel.taskData().empty == true) ? View.VISIBLE : View.GONE }"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_task_btn"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:visibility="@{(viewModel.taskData() != null &amp;&amp; viewModel.taskData().empty == false) ? View.VISIBLE : View.GONE }"
            android:layout_marginHorizontal="@dimen/large"
            tools:listitem="@layout/task_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_task_btn"
            app:layout_constraintBottom_toTopOf="@id/recycler_tasks"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_tasks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/large"
            android:clipToPadding="false"
            android:visibility="@{(viewModel.taskData() != null &amp;&amp; viewModel.taskData().empty == false) ? View.VISIBLE : View.GONE }"
            android:paddingTop="@dimen/medium"
            android:paddingBottom="@dimen/x_large"
            tools:listitem="@layout/task_item_raw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_category"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
